--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="8">
-        <title>💸My First Website💸</title>
+        <title>💸Dan Joseph Magno - Writer, SEO Specialist, Experienced Copywriter, All Around Virtual Assistant💸</title>
     </head>
     <body>
         <table cellspacing="20">
@@ -10,7 +10,7 @@
                 <td><img src="https://media.licdn.com/dms/image/D5603AQHjzRzILNFwHQ/profile-displayphoto-shrink_200_200/0/1674045017470?e=1680739200&v=beta&t=2H8G-jmeZwZsgskSCMIzH6XFbLCwr2eCnkA72HbXVHg" alt="Dan Joseph Profile Picture"></td>
                 <td><h1>Dan Joseph Magno</h1>
                     <p><em>Copywriter and Web Developer, Founder of <strong><a href="https://www.linkedin.com/in/danjosephmagno/">Internet Ecommerce Copywriting</a></strong></em></p>
-                        <p>I am a copywriter and a web developer. I worked with numerous ecommerce businesses and startups. I drink black tea and playing PC games.</p></td>
+                        <p>I am a copywriter, SEO writer, and a web developer. I worked with numerous ecommerce businesses and startups. I drink black tea and playing PC games.</p></td>
             </tr>
         </table>
         <hr>
