--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                 <td><img src="https://media.licdn.com/dms/image/D5603AQHjzRzILNFwHQ/profile-displayphoto-shrink_200_200/0/1674045017470?e=1680739200&v=beta&t=2H8G-jmeZwZsgskSCMIzH6XFbLCwr2eCnkA72HbXVHg" alt="Dan Joseph Profile Picture"></td>
                 <td><h1>Dan Joseph Magno</h1>
                     <p><em>Copywriter and Web Developer, Founder of <strong><a href="https://www.linkedin.com/in/danjosephmagno/">Internet Ecommerce Copywriting</a></strong></em></p>
-                        <p>I am a copywriter, SEO writer, and a web developer. I worked with numerous ecommerce businesses and startups. I drink black tea and playing PC games.</p></td>
+                        <p>I am a copywriter, SEO writer, and a web developer. I worked for numerous ecommerce businesses and startups. I prefer black tea over coffee, and I love spending my free time playing PC games.</p></td>
             </tr>
         </table>
         <hr>
@@ -20,6 +20,7 @@
             <li>Research</li>
             <li>Copywriting</li>
             <li>Web Development</li>
+            <li>Backend Support</li>
         </ul>
         <hr>
         <h3>Work Experience</h3>
@@ -57,7 +58,7 @@
             </tr>
             <tr>
                 <td>2009-2012</td>
-                <td>Broke Freelance Writer</td>
+                <td>Broke and Struggling</td>
             </tr>
         </table>
         <hr>
@@ -106,11 +107,11 @@
                                 <td>⭐⭐⭐⭐</td>
                             </tr>
                             <tr>
-                                <td>CSGO</td>
+                                <td>Playing CSGO</td>
                                 <td>⭐⭐⭐</td>
                             </tr>
                             <tr>
-                                <td>Starcraft II</td>
+                                <td>Playing Starcraft II</td>
                                 <td>⭐⭐</td>
                             </tr>
                         </tbody>
