--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="8">
-        <title>💸Dan Joseph Magno - Writer, SEO Specialist, Experienced Copywriter, All Around Virtual Assistant💸</title>
+        <title>💸Dan Joseph Magno - For Hire Freelance Copywriter, Freelance SEO Specialist, Shopify Woocommerce Virtual Assistant💸</title>
     </head>
     <body>
         <table cellspacing="20">
             <tr>
                 <td><img src="https://media.licdn.com/dms/image/D5603AQHjzRzILNFwHQ/profile-displayphoto-shrink_200_200/0/1674045017470?e=1680739200&v=beta&t=2H8G-jmeZwZsgskSCMIzH6XFbLCwr2eCnkA72HbXVHg" alt="Dan Joseph Profile Picture"></td>
                 <td><h1>Dan Joseph Magno</h1>
-                    <p><em>Copywriter and Web Developer, Founder of <strong><a href="https://www.linkedin.com/in/danjosephmagno/">Internet Ecommerce Copywriting</a></strong></em></p>
+                    <p><em>Copywriter and Web Developer, Founder of <strong><a href="https://www.linkedin.com/in/danjosephmagno/">Premier SEO Copywriting</a></strong></em></p>
                         <p>I am a copywriter, SEO writer, and a web developer. I worked for numerous ecommerce businesses and startups. I prefer black tea over coffee, and I love spending my free time playing PC games.</p></td>
             </tr>
         </table>
